fixing todowrap title

--- a/src/styles/pages/About.css
+++ b/src/styles/pages/About.css
@@ -6,6 +6,13 @@ align-items: center;
 margin-right: 1rem;
 }
 
+.to-do-title{
+    word-wrap: break-word; 
+    max-width: 100%;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
 /* Picture Container */
 .picture-container {
 flex-shrink: 0;
